<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:background="@color/white"
    tools:context=".LoginActivity">




    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:orientation="vertical"
        android:padding="10dp">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/chat_icon" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/SignIn"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                app:errorEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_editEmail">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:id="@+id/editTextTextEmailAddress"
                    android:maxLines="1"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                app:errorEnabled="true"
                app:passwordToggleDrawable="@drawable/selector_icon_password"
                app:passwordToggleEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_editPassword">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:id="@+id/editTextTextPassword"
                    android:maxLines="1"
                    android:imeOptions="actionNext"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:background="@color/colorPrimaryDark"
                android:stateListAnimator="@drawable/state_list_animator_z"
                android:id="@+id/btn_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:textStyle="bold"
                android:text="@string/Login_text"
                android:textColor="@color/gray_100" />

            <TextView
                android:id="@+id/errorMsg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/errormsg"
                android:textAlignment="viewStart"
                android:textColor="@color/colorError"
               />
        </LinearLayout>

</RelativeLayout>