<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/chat_icon" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/app_name"
            android:textSize="24dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/WelcomeText"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/gray_100"
        android:divider="?android:dividerHorizontal"
        android:orientation="vertical"

        android:showDividers="middle">

        <LinearLayout

            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:measureWithLargestChild="true"
            android:orientation="horizontal">

            <Button

                android:id="@+id/btn_sign_in"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:background="@color/gray_100"
                android:maxLines="2"
                android:text="@string/Login_text" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />
            <Button
                android:id="@+id/go_new_account"

                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:background="@color/gray_100"
                android:filterTouchesWhenObscured="true"
                android:maxLines="2"
                android:text="@string/CreateAccount" />

            <LinearLayout
                android:id="@+id/leftSpacer"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:orientation="horizontal"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/rightSpacer"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:orientation="horizontal"
                android:visibility="gone" />



        </LinearLayout>
    </LinearLayout>
</RelativeLayout>