<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingStatusProfile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".SettingActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/profile_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/changeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImage">

        <TextView
            android:id="@+id/displayNameTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="start"
            android:text="@string/Name"
            android:textColor="@color/purple_500" />

        <TextView
            android:id="@+id/displayNameUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="" />

        <View
            android:background="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="1dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/changeAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeName">

        <TextView
            android:id="@+id/AboutUserTitle"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="28dp"
            android:gravity="start"
            android:text="@string/About"
            android:textColor="@color/purple_500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/displayNameUser" />

        <TextView
            android:id="@+id/AboutUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/AboutUserTitle" />

        <View
            android:background="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="1dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/changePhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeAbout">

        <TextView
            android:id="@+id/phoneuserTitle"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="36dp"
            android:gravity="start"
            android:text="@string/PhoneNumber"
            android:textColor="@color/purple_500" />

        <TextView
            android:id="@+id/phoneUser"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:gravity="start"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneuserTitle" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>